# hdw-c

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: vendor.cmake
examples/: CMakeLists.txt
examples/ckd/: CMakeLists.txt  app.cxx  main.c
examples/hmac/: CMakeLists.txt  app.cxx
include/hdw/: api.h  errors.h
include/hdw/internal/: curve.h  encoding.h  hmac.h  math.h
include/hdwallet/: api.h
include/internal/: curve.h  encoding.h  hmac.h  math.h
src/: CMakeLists.txt  api.c  api.cxx  curve.c  curve.cxx  encoding.c  hmac.c  hmac.cxx  math.c  math.cxx
tests/: CMakeLists.txt
tests/encoding/: CMakeLists.txt  main.cxx
tests/secp256k1/: CMakeLists.txt  main.cxx
